<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_princ">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_centerHorizontal="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="27dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:gravity="center"
            android:text="@string/text5"
            android:textColor="@color/orange"
            android:orientation="vertical"
            android:shadowColor="@color/black"
            android:textSize="30sp"
            android:fontFamily="@font/bungee_inline"
            />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:orientation="vertical"
            android:background="@drawable/layout_backgr">
          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="600dp"
              android:orientation="vertical"
              >
              <TextView
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:id="@+id/well"
                  android:layout_marginEnd="20dp"
                  android:layout_marginStart="20dp"
                  android:layout_marginTop="7dp"
                  android:drawablePadding="22dp"
                  android:text="@string/text6"
                  android:textColor="@color/black"
                  android:textSize="32sp"
                  android:padding="18dp"
                  android:textAlignment="center" />
              <RelativeLayout
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_marginLeft="10dp"

                  android:id="@+id/relavvv">

                  <ImageView
                      android:layout_width="wrap_content"
                      android:layout_marginLeft="10dp"
                      android:layout_height="wrap_content"
                      android:background="@drawable/but"
                      android:layout_alignLeft="@id/rela"
                      android:layout_centerVertical="true"
                      tools:ignore="NotSibling" />

                  <com.google.android.material.textfield.TextInputLayout
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_marginEnd="20dp"
                      android:id="@+id/name"
                      app:errorEnabled="true"

                      android:layout_marginStart="33dp">

                      <com.google.android.material.textfield.TextInputEditText
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"


                          android:drawablePadding="10dp"
                          android:padding="20dp"
                          android:textSize="14sp"
                          android:textColorHint="#606060"
                          android:inputType="text"
                          android:hint="USERNAME"/>

                  </com.google.android.material.textfield.TextInputLayout>
              </RelativeLayout>
              <RelativeLayout
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_marginLeft="10dp"
                  android:id="@+id/relaveee">

                  <ImageView
                      android:layout_width="wrap_content"

                      android:layout_marginLeft="10dp"
                      android:layout_height="wrap_content"
                      android:background="@drawable/ic_email_black_24dp"
                      android:layout_alignLeft="@id/relav"
                      android:layout_centerVertical="true"
android:backgroundTint="#FF000000"
                      tools:ignore="NotSibling" />

                  <com.google.android.material.textfield.TextInputLayout
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_marginEnd="20dp"
                      android:id="@+id/emailup"
                      app:errorEnabled="true"

                      android:layout_marginStart="33dp">
                      <com.google.android.material.textfield.TextInputEditText
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:drawablePadding="10dp"
                          android:padding="20dp"
                          android:textSize="14sp"
                          android:textColorHint="#606060"
                          android:inputType="textEmailAddress"
                          android:hint="EMAIL"/>

                  </com.google.android.material.textfield.TextInputLayout>

              </RelativeLayout>

              <RelativeLayout
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_marginLeft="10dp"

                  android:id="@+id/relaeevv">

                  <ImageView
                      android:layout_width="wrap_content"
                      android:layout_marginLeft="10dp"
                      android:layout_height="wrap_content"
                      android:background="@drawable/but2"
                      android:layout_alignLeft="@id/rela"
                      android:layout_centerVertical="true"
                      tools:ignore="NotSibling" />

                  <com.google.android.material.textfield.TextInputLayout
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_marginEnd="20dp"
                      android:id="@+id/passwordup"
                      app:errorEnabled="true"
                      app:passwordToggleEnabled="true"

                      android:layout_marginStart="33dp">

                      <com.google.android.material.textfield.TextInputEditText
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"


                          android:drawablePadding="10dp"
                          android:padding="20dp"
                          android:textSize="14sp"
                          android:textColorHint="#606060"
                          android:inputType="textPassword"
                          android:hint="PASSWORD"/>

                  </com.google.android.material.textfield.TextInputLayout>
              </RelativeLayout>

              <ImageButton
                  android:id="@+id/bttretour"
                  android:onClick="retour"
                  android:layout_width="50dp"
                  android:layout_height="50dp"
                  android:layout_gravity="end"
                  android:layout_marginTop="25dp"
                  android:layout_marginEnd="25dp"
                  android:src="@drawable/ic_arrow_back_black_24dp"
                  android:background="@drawable/custom_button3" />
              <Button
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_gravity="center"
                  android:layout_marginLeft="40dp"
                  android:layout_marginRight="40dp"
                  android:layout_marginTop="66dp"
                  android:background="@drawable/custom_button2"
                  android:id="@+id/buttonreg"
                  android:text="@string/text7"
                  android:textSize="23sp"

                  />

              <ProgressBar
                  android:id="@+id/progressBar"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_gravity="center_horizontal"
android:layout_marginTop="10dp"
                  android:visibility="gone" />




        </LinearLayout>







        </LinearLayout>
    </LinearLayout>

</RelativeLayout>